# Placekey-Address-Processor

./: .gitignore  PROJECT_UPGRADE_SUMMARY.md  README.md  RELEASE_NOTES.md  USAGE_EXAMPLE.md  __init__.py  bidirectional_test_summary.md  main.py  placekey_processor.py  placekey_reverse_mapper.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  start_clean.sh  test_reverse_mapping.py
CN_Introduction/: QUICK_START.md  SOLUTION_GUIDE.md  USER_GUIDE.md  WEB_UI_GUIDE.md
config/: .env.example  column_mapping.json  pyrightconfig.json
data/input/: apartment_address_template.csv
docs/: QUICK_START.md  SOLUTION_GUIDE.md  WEB_UI_GUIDE.md
examples/: input_sample.csv  output_sample.csv  usage_examples.py
scripts/: run.sh  start_web.sh
src/apartment_accesscode/: __init__.py  address_processor.py  apartment_handler.py  batch_processor.py  config.py  integration_processor.py  main.py  placekey_client.py  process_user_data.py
src/apartment_classifier/: address_processor.py  apartment_handler.py  batch_processor.py  config.py  integration_processor.py  placekey_client.py  process_user_data.py
tests/unit/: test_apartment_handler.py
ui/: app.py
ui/static/: template.csv
ui/static/js/: main.js
ui/templates/: index.html
